# runestaff

./: .gitignore  AGENTS.md  Cargo.toml  README.md
rns-lang/: Cargo.toml  README.md  TEST_REDESIGN.md
rns-lang/snapshots/: lexer-directives-wrong_directive.snap
rns-lang/src/: ast.rs  cursor.rs  diagnostic.rs  error.rs  instruction.rs  lexer.rs  lib.rs  main.rs  suggestion.rs  token.rs  utils.rs  warning.rs
rns-lang/src/assembler/: error.rs  jvm_warning.rs  mod.rs
rns-lang/src/ast/: flag.rs  mod.rs
rns-lang/src/disassembler/: attribute.rs  class.rs  constant_pool.rs  flags.rs  indent_write.rs  instruction.rs  method.rs  mod.rs
rns-lang/src/lexer/: error.rs  mod.rs  snapshot_tests.rs  tests.rs
rns-lang/src/module/: jvm_warning.rs  mod.rs
rns-lang/src/parser/: error.rs  error_deprecated.rs  jasm_warning.rs  mod.rs  tests.rs  warning.rs
rns-lang/src/snapshots/: jasm__diagnostic__tests__format_internal_error.snap  jasm__error__tests__format_internal_error.snap
rns-lang/src/token/: flag.rs  kind.rs  mod.rs  span.rs  type_hint.rs
rns-lang/test_data/e2e/: HelloWorld.ja
rns-lang/tests/: diagnostic_test.rs  e2e_test.rs  integration_test.rs  jasm_test.rs  rns_test.rs  roundtrip_test.rs
rns-lang/tests/snapshots/: err-lexer-chars-invalid_bracket_start.snap  err-lexer-chars-unexpected_symbol.snap  err-lexer-directives-dot_abstract.snap  err-lexer-directives-dot_annotation.snap  err-lexer-directives-dot_dot_annotation.snap  err-lexer-directives-dot_dot_class.snap  err-lexer-directives-dot_dot_code.snap  err-lexer-directives-dot_dot_end.snap  err-lexer-directives-dot_dot_method.snap  err-lexer-directives-dot_dot_super.snap  err-lexer-directives-dot_enum.snap  err-lexer-directives-dot_eof.snap  err-lexer-directives-dot_final.snap  err-lexer-directives-dot_inteface.snap  err-lexer-directives-dot_integer.snap  err-lexer-directives-dot_method_descriptor.snap  err-lexer-directives-dot_module.snap  err-lexer-directives-dot_newline.snap  err-lexer-directives-dot_public.snap  err-lexer-directives-dot_semicolon.snap  err-lexer-directives-dot_semicolon_comment.snap  err-lexer-directives-dot_space.snap  err-lexer-directives-dot_space_class.snap  err-lexer-directives-dot_static.snap  err-lexer-directives-dot_string_literal.snap  err-lexer-directives-dot_synthetic.snap  err-lexer-directives-dot_tab.snap  err-lexer-directives-two_dots.snap  err-lexer-directives-unknown_directive_as_first_token.snap  err-lexer-directives-unknown_directive_as_second_token.snap  err-lexer-integers-hex_prefix.snap  err-lexer-integers-huge_overflow.snap  err-lexer-integers-invalid_format_letters.snap  err-lexer-integers-invalid_format_mixed.snap  err-lexer-integers-invalid_negative_format.snap  err-lexer-integers-minus_only.snap  err-lexer-integers-overflow_negative.snap  err-lexer-integers-overflow_positive.snap  err-lexer-integers-plus_sign.snap  err-lexer-strings-basic_unterminated_string.snap  (+398 more)
rns-lsp/: Cargo.toml
rns-lsp/src/: main.rs
rnsc/: Cargo.toml
rnsc/src/: main.rs
rnsc/tests/: cli_test.rs  rns_test.rs
rnsc/tests/snapshots/: cli-quiet-assembler_warn.snap  cli-quiet-jvm_spec_warn.snap  error-assembler-package_with_class_utf8.snap  error-assembler-package_with_mangled_name_utf8.snap  error-lexer-directives-dot_abstract.snap  error-lexer-directives-dot_abstract_wasm.snap  error-lexer-directives-dot_abstract_werror.snap  error-lexer-directives-dot_dot_annotation.snap  error-lexer-directives-dot_dot_annotation_wasm.snap  error-lexer-directives-dot_dot_class.snap  error-lexer-directives-dot_dot_class_wasm.snap  error-lexer-directives-dot_dot_code.snap  error-lexer-directives-dot_dot_code_wasm.snap  error-lexer-directives-dot_dot_code_werror.snap  error-lexer-directives-dot_dot_end.snap  error-lexer-directives-dot_dot_end_wasm.snap  error-lexer-directives-dot_dot_method.snap  error-lexer-directives-dot_dot_method_wasm.snap  error-lexer-directives-dot_dot_super.snap  error-lexer-directives-dot_enum.snap  error-lexer-directives-dot_enum_wasm.snap  error-lexer-directives-dot_eof_wasm.snap  error-lexer-directives-dot_final.snap  error-lexer-directives-dot_final_wasm.snap  error-lexer-directives-dot_final_werror.snap  error-lexer-directives-dot_inteface.snap  error-lexer-directives-dot_inteface_werror.snap  error-lexer-directives-dot_integer.snap  error-lexer-directives-dot_integer_wasm.snap  (+478 more)
(+800 files in other folders)
