[workspace]
resolver = "2"

members = [
    "rns-lang",
    "rnsc",
    "rns-lsp",
]

[workspace.dependencies]
jclass = { git = "https://github.com/lagertha-rs/lagertha", branch = "main", package = "lvm-class" }
common = { git = "https://github.com/lagertha-rs/lagertha", branch = "main", package = "lvm-common" }
rns = { path = "rns-lang", package = "rns-lang" }
