[package]
name = "rns-lang"
version = "0.1.0"
edition = "2024"
description = "RNS language parser, compiler, and assembler library for the Lagertha VM project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lagertha-rs/lagertha"
homepage = "https://github.com/lagertha-rs"
authors = ["Obito-git"]
keywords = ["jvm", "java", "bytecode", "assembly", "rns"]
categories = ["compilers", "development-tools"]

[lib]
name = "rns"
path = "src/lib.rs"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
common = { workspace = true }
jclass = { workspace = true, features = ["write"] }
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
rstest = "0.26.1"
insta = "1.46.2"
tabwriter = "1"
