[package]
name = "rns-asm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rns-asm"
path = "src/main.rs"

[dependencies]
rns = { path = "../rns" }
jclass = { path = "../jclass", features = ["rns_assemble", "rns_disassemble"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rstest = "0.26.1"
insta = "1.46.2"
assert_cmd = "2"
sha2 = "0.10"
rand = "0.8"
